Added rate limiter

--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -16,5 +16,8 @@
     "scripts"
   ],
   "author": "Hans de Rooij",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "dependencies": {
+    "limiter": "^2.0.1"
+  }
 }
