--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -18,6 +18,7 @@
   "author": "Hans de Rooij",
   "license": "Apache-2.0",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "limiter": "^2.0.1"
   }
 }
