--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "temp": "node ./src/share/httpApiDefs",
     "thumbsUp": "node ./src/script/test/thumbsUp",
     "fetch": "node ./src/script/test/fetch",
     "test": "echo \"Error: no test specified\" && exit 1"
