Finished dnbDplAuthToken.js

--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken true \"accessToken.json\" false",
+    "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken true \"accessToken.json\" true",
     "fetch": "node ./src/script/test/fetch",
     "https": "node ./src/script/test/https",
     "thumbsUp": "node ./src/script/test/thumbsUp",
