--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,6 @@ web_modules/
 
 # Next.js build output
 .next
-out
 
 # Nuxt.js build / generate output
 .nuxt
@@ -131,3 +130,5 @@ dist
 
 # No version control on input & output files
 .io
+out/
+in/
