--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken true \"accessToken.json\" true",
+    "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken false \"\" true",
+    "dplListOfDUNS": "run-func ./src/script/dnbDplListOfDUNS.js dplListOfDUNS",
     "fetch": "node ./src/script/test/fetch",
     "https": "node ./src/script/test/https",
     "thumbsUp": "node ./src/script/test/thumbsUp",
@@ -22,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "limiter": "^2.0.1",
+    "n-readlines": "^1.0.1",
     "run-func": "^3.0.0"
   }
 }
