Started implementation D+ data processing

--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken \"\" \"\" true",
     "getListOfKeys": "node ./src/script/getListOfKeys",
+    "dplProcessData": "node ./src/script/dnbDplProcessData",
     "fetch": "node ./src/script/test/fetch",
     "https": "node ./src/script/test/https",
     "thumbsUp": "node ./src/script/test/thumbsUp",
