--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -8,6 +8,7 @@
     "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken \"\" \"\" true",
     "getListOfKeys": "node ./src/script/getListOfKeys",
     "dplProcessData": "node ./src/script/dnbDplProcessData",
+    "leiMatchInBulk": "node ./src/script/leiMatchInBulk",
     "fetch": "node ./src/script/test/fetch",
     "https": "node ./src/script/test/https",
     "thumbsUp": "node ./src/script/test/thumbsUp",
