--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -8,6 +8,7 @@
     "dplAuthToken": "run-func ./src/script/dnbDplAuthToken.js dplAuthToken \"\" \"\" true",
     "getListOfKeys": "node ./src/script/getListOfKeys",
     "dplProcessData": "node ./src/script/dnbDplProcessData",
+    "dplProcessIDR": "node ./src/script/dnbDplProcessIDR",
     "dplIdrInBulk": "node ./src/script/dnbDplIdrInBulk",
     "leiMatchInBulk": "node ./src/script/leiMatchInBulk",
     "chunks": "node ./src/script/test/chunks",
