First commit of API Hub code

--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -16,6 +16,7 @@
     "https": "node ./src/script/test/https",
     "thumbsUp": "node ./src/script/test/thumbsUp",
     "nanoid": "node ./src/script/test/nanoid",
+    "devHub": "nodemon ./src/server/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,10 +29,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "limiter": "^2.0.1",
     "n-readlines": "^1.0.1",
     "nanoid": "^5.0.3",
     "pg": "^8.11.3",
     "run-func": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
