--- a/backend/node/Dockerfile
+++ b/backend/node/Dockerfile
@@ -23,7 +23,7 @@ FROM node:20.11-alpine3.18
 WORKDIR /usr/src/app/
 
 # Install app dependencies
-COPY package*.json .
+COPY package*.json ./
 RUN npm install --omit=dev
 
 # Deliver source code
