--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -35,6 +35,7 @@
     "n-readlines": "^1.0.1",
     "nanoid": "^5.0.3",
     "pg": "^8.11.3",
+    "pg-cursor": "^2.10.3",
     "run-func": "^3.0.0"
   },
   "devDependencies": {
