--- a/backend/node/package.json
+++ b/backend/node/package.json
@@ -29,6 +29,7 @@
   "author": "Hans de Rooij",
   "license": "Apache-2.0",
   "dependencies": {
+    "csv-stringify": "^6.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "limiter": "^2.0.1",
