--- a/frontend/src/.github/workflows/deploy.yml
+++ b/frontend/src/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: frontend
+
 jobs:
   build:
     name: Build
@@ -21,7 +25,6 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Build project
-        working-directory: frontend
         run: npm run build
 
       - name: Upload production-ready build files
