--- a/frontend/src/.github/workflows/deploy.yml
+++ b/frontend/src/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Change dir
+        run: cd ./frontend
+        
       - name: Checkout repo
         uses: actions/checkout@v3
 
